_generated-doc/2.7/config/quarkus-vertx-http-config-group-policy-mapping-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-vertx-http-config-group-policy-mapping-config_configuration]]link:#quarkus-vertx-http-config-group-policy-mapping-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http-config-group-policy-mapping-config_quarkus.http.auth.permission.-permissions-.enabled]]`link:#quarkus-vertx-http-config-group-policy-mapping-config_quarkus.http.auth.permission.-permissions-.enabled[quarkus.http.auth.permission."permissions".enabled]`

[.description]
--
Determines whether the entire permission set is enabled, or not. By default, if the permission set is defined, it is enabled.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http-config-group-policy-mapping-config_quarkus.http.auth.permission.-permissions-.policy]]`link:#quarkus-vertx-http-config-group-policy-mapping-config_quarkus.http.auth.permission.-permissions-.policy[quarkus.http.auth.permission."permissions".policy]`

[.description]
--
The HTTP policy that this permission set is linked to. There are 3 built in policies: permit, deny and authenticated. Role based policies can be defined, and extensions can add their own policies.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http-config-group-policy-mapping-config_quarkus.http.auth.permission.-permissions-.methods]]`link:#quarkus-vertx-http-config-group-policy-mapping-config_quarkus.http.auth.permission.-permissions-.methods[quarkus.http.auth.permission."permissions".methods]`

[.description]
--
The methods that this permission set applies to. If this is not set then they apply to all methods. Note that if a request matches any path from any permission set, but does not match the constraint due to the method not being listed then the request will be denied. Method specific permissions take precedence over matches that do not have any methods set. This means that for example if Quarkus is configured to allow GET and POST requests to /admin to and no other permissions are configured PUT requests to /admin will be denied.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http-config-group-policy-mapping-config_quarkus.http.auth.permission.-permissions-.paths]]`link:#quarkus-vertx-http-config-group-policy-mapping-config_quarkus.http.auth.permission.-permissions-.paths[quarkus.http.auth.permission."permissions".paths]`

[.description]
--
The paths that this permission check applies to. If the path ends in /++*++ then this is treated as a path prefix, otherwise it is treated as an exact match. Matches are done on a length basis, so the most specific path match takes precedence. If multiple permission sets match the same path then explicit methods matches take precedence over over matches without methods set, otherwise the most restrictive permissions are applied.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http-config-group-policy-mapping-config_quarkus.http.auth.permission.-permissions-.auth-mechanism]]`link:#quarkus-vertx-http-config-group-policy-mapping-config_quarkus.http.auth.permission.-permissions-.auth-mechanism[quarkus.http.auth.permission."permissions".auth-mechanism]`

[.description]
--
Path specific authentication mechanism which must be used to authenticate a user. It needs to match `HttpCredentialTransport` authentication scheme such as 'basic', 'bearer', 'form', etc.
--|string 
|

|===